<resources>
    <string name="app_name">Angel Car</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_hint">เขียนข้อความ...</string>
    <string name="post_notice">การลงประกาศรถมือสองสมาชิกทั่วไป สามารถลงประกาศได้ไม่เกิน 3 คัน หากผู้ใช้งานต้องการลงมากกว่าที่กำหนด ท่านสามารถลงทะเบียนเป็นสถานะ “เต้นท์รถ” ได้โดยไม่มีค่าใช้จ่ายครับ</string>
    <string name="all">All</string>
    <string name="pre">Previous</string>
    <string name="next">Next</string>
    <string name="menu_text">เมนู</string>
    <string name="baseUrlImg_thumbnail">http://angelcar.com/ios/data/gadata/thumbnailcarimages/</string>
    <string name="baseUrlImg_full">http://angelcar.com/ios/data/gadata/carimages/</string>

    <string name="un_follow">เลิกติดตาม</string>
    <string name="follow">ติดตาม</string>
    <string name="read">อ่านแล้ว</string>
    <string name="un_read">ยังไม่อ่าน</string>

    <!--<string name="key_message" formatted="false" >message_json_%s_%s</string>-->

    <string name="deal_low">ต่ำกว่าราคากลาง</string>
    <string name="deal_mid">ราคากลาง</string>
    <string name="deal_high">สูงกว่าราคากลาง</string>

    <string-array name="time_days_of_week">
        <item>อา.</item>
        <item>จ.</item>
        <item>อ.</item>
        <item>พ.</item>
        <item>พฤ.</item>
        <item>ศ.</item>
        <item>ส.</item>
    </string-array>

    <string name="time_today">วันนี้</string>
    <string name="time_yesterday">เมื่อวาน</string>
    <string name="text_finance">จัดไฟแนนซ์</string>
    <string name="text_refinance">รีไฟแนนซ์</string>
    <string name="text_pawn">จำนำทะเบียน</string>
    <string name="text_deal">รอตรวจสอบหลักฐาน</string>
    <string name="gear">เกียร์</string>
    <string name="price">ราคา</string>
    <string name="province">จังหวัด</string>
    <string name="car_details">รายละเอียด</string>
    <string name="tel">โทร</string>
    <string name="name">ชื่อ-นามสกุล :</string>
    <string name="topic_post">คำโฆษณา</string>
    <string name="evidence">แนบหลักฐาน</string>
    <string name="close">ปิด</string>
    <string name="goto_shop">ไปที่ shop</string>
    <string name="alert">แจ้งเตือน</string>
    <string name="alert_message_topic">เฉพาะเจ้าของข้อความแชท เท่านั้นจึงจะเข้าดูรายละเอียดแชทได้</string>
    <string name="alert_new_topic">สอบถามเจ้าหน้าที่ cls</string>
    <string name="alert_edit_shop">กรุณาใส่(ชื่อ,รูป)ที่ Shop เพื่อระบุตัวตนก่อนประกาศขาย</string>
    <string name="alert_message_personnel">"ต้องการสอบถามยอดจัดจากเจ้าหน้าที่\n(เวลาทำการ จันทร์-ศุกร์ 8.30-17.00 และเสาร์ 8.30-12.00 หากติดต่อนอกเวลาดังกล่าวเจ้าหน้าที่จะมาตอบในวันทำการถัดไปค่ะ)"</string>
    <string name="evidence_owner">กรณีเจ้าของรถ แนบภาพถ่ายเจ้าของรถ</string>
    <string name="evidence_delegate">กรณีตัวแทนเจ้าของ แนบภาพถ่ายเจ้าของรถและภาพถ่ายผู้ประกาศ</string>
    <string name="evidence_dealers">กรณีเต้นท์รถ แนบภาพถ่ายเต้นท์และภาพถ่ายเจ้าของ \n(**สิทธิประโยชน์สำหรับเต้นท์** )\n ลงรถได้ไม่จำกัด, เลื่อนประกาศฟรี, ไม่ต้องส่งเอกสารทุกครั้งที่มีประกาศ</string>

    <string name="dialog_info_title">ข้อมูลติดต่อกลับ</string>
    <string name="dialog_info_message">กรุณากรอกข้อมูลสำหรับติดต่อกลับเพื่อเปิดใช้บิรการสำหรับผู้ประกอบการรถมือสอง หรือโทร 02-571-3000</string>
    <string name="dialog_info_message_sub1">[สิทธิพิเศษเบื้องต้น]</string>
    <string name="dialog_info_message_sub2">- ไม่ต้องกรอกข้อมูลติดต่อ\n- ไม่ต้องใส่หลักฐาน</string>

    <string name="status_network">การเชื่อมต่ออินเตอร์เน็ตมีปัญหา โปรดตรวจสอบ</string>

    <string-array name="province">
        <item>ราชบุรี</item>
        <item>เพชรบูรณ์</item>
        <item>พิจิตร</item>
        <item>พิษณุโลก</item>
        <item>สุโขทัย</item>
        <item>ตาก</item>
        <item>กำแพงเพชร</item>
        <item>อุทัยธานี</item>
        <item>นครสวรรค์</item>
        <item>แม่ฮ่องสอน</item>
        <item>เชียงราย</item>
        <item>พะเยา</item>
        <item>น่าน</item>
        <item>แพร่</item>
        <item>อุตรดิตถ์</item>
        <item>ลำปาง</item>
        <item>ลำพูน</item>
        <item>เชียงใหม่</item>
        <item>มุกดาหาร</item>
        <item>นครพนม</item>
        <item>สกลนคร</item>
        <item>กาฬสินธุ์</item>
        <item>ร้อยเอ็ด</item>
        <item>มหาสารคาม</item>
        <item>หนองคาย</item>
        <item>เลย</item>
        <item>อุดรธานี</item>
        <item>ขอนแก่น</item>
        <item>หนองบัวลำภู</item>
        <item>อำนาจเจริญ</item>
        <item>ชัยภูมิ</item>
        <item>ยโสธร</item>
        <item>อุบลราชธานี</item>
        <item>ศรีสะเกษ</item>
        <item>สุรินทร์</item>
        <item>บุรีรัมย์</item>
        <item>นครราชสีมา</item>
        <item>สระแก้ว์</item>
        <item>นครนายก</item>
        <item>ปราจีนบุรี</item>
        <item>ฉะเชิงเทรา</item>
        <item>ตราด</item>
        <item>จันทบุรี</item>
        <item>ระยอง</item>
        <item>ชลบุรี</item>
        <item>สระบุรี</item>
        <item>ชัยนาท</item>
        <item>สิงห์บุรี</item>
        <item>ลพบุรี</item>
        <item>อ่างทอง</item>
        <item>พระนครศรีอยุธยา</item>
        <item>ปทุมธานี</item>
        <item>นนทบุรี</item>
        <item>สมุทรปราการ</item>
        <item>กรุงเทพมหานคร</item>
        <item>กาญจนบุรี</item>
        <item>สุพรรณบุรี</item>
        <item>นครปฐม</item>
        <item>สมุทรสาคร</item>
        <item>สมุทรสงคราม</item>
        <item>เพชรบุรี</item>
        <item>ประจวบครีขันธ์</item>
        <item>นครศรีธรรมราช</item>
        <item>กระบี่</item>
        <item>พังงา</item>
        <item>ภูเก็ต</item>
        <item>สุราษฎร์ธานี</item>
        <item>ระนอง</item>
        <item>ชุมพร</item>
        <item>สงขลา</item>
        <item>สตูล</item>
        <item>ตรัง</item>
        <item>พัทลุง</item>
        <item>ปัตตานี</item>
        <item>ยะลา</item>
        <item>นราธิวาส</item>
        <item>บึงกาฬ</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Shopname</string>
    <string name="pref_description">Description</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">การแจ้งเตือนภายในแอพ</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="post_dealers">ผู้ประกอบการรถมือสอง(เต็นท์รถ)</string>
    <string name="post_delegate">ตัวแทนเจ้าของรถ</string>
    <string name="post_owner">เจ้าของรถ(ลงประกาศขายเอง)</string>
    <string name="shop_text_name">ชื่อของคุณหรือชื่อร้าน</string>
    <string name="shop_text_description">รายละเอียดเกี่ยวกับคุณ</string>
    <string name="wait_wifi">กำหลังรอเครือข่าย</string>
    <string name="filter_all">ทั้งหมด</string>
    <string name="why_must_login"><u>why? must login</u>.</string>
    <string name="why_must_register"><u>why? must register</u>.</string>

</resources>
