<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:orientation="vertical">

    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/dialog_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/colorHintDark"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_gravity="center"
        android:textStyle="italic"
        android:padding="8dp"
        android:text="@string/dialog_info_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="bold|italic"
        android:gravity="center"
        android:text="@string/dialog_info_message_sub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_gravity="center"
        android:textStyle="italic"
        android:padding="8dp"
        android:text="@string/dialog_info_message_sub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <EditText
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            android:inputType="text"
            android:id="@+id/edit_text_name"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <EditText
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            android:inputType="phone|text"
            android:maxLength="10"
            android:id="@+id/edit_text_telephone"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/button_save"
        android:layout_gravity="bottom"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_menu_bottom"
        android:text="Save" />


</LinearLayout>