<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
         android:gravity="center"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_icon_profile"
            android:src="@mipmap/ic_launcher"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/text_shop_name"
                android:text="[Shop Name]"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_status"
                android:text="[status]"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="4dp"
                android:background="#FFE0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>

    </LinearLayout>

    
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/text_brand"
                android:padding="8dp"
                android:freezesText="true"
                android:textStyle="bold"
                android:text="#[Brand]"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.dollarandtrump.angelcar.view.PhotoView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_evidence"
                android:gravity="center"
                android:clickable="true"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:text="@string/evidence"
                android:textSize="18sp"
                android:background="@drawable/selector_menu_bottom_evidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="15sp"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:text="@string/gear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:layout_gravity="center"
                    android:checked="false"
                    android:text=""
                    android:textOff=""
                    android:textOn=""
                    android:id="@+id/toggle_button_gear"
                    android:background="@drawable/selector_gear_toggle_button"
                    android:layout_width="80dp"
                    android:layout_height="40dp" />


                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:text="@string/province"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner_province"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="15sp"
                android:gravity="end"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:textStyle="bold"
                android:textSize="15sp"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:id="@+id/input_layout_name"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->
                    <!--<EditText-->
                        <!--android:textSize="16sp"-->
                        <!--android:layout_marginLeft="8dp"-->
                        <!--android:layout_marginRight="8dp"-->
                        <!--android:inputType="text"-->
                        <!--android:maxLines="1"-->
                        <!--android:textStyle="bold"-->
                        <!--android:id="@+id/edit_text_name"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="@string/name" />-->
                <!--</android.support.design.widget.TextInputLayout>-->

            <LinearLayout
                android:gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_price"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:inputType="number|text"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:id="@+id/edit_text_price"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_tel"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="15sp"
                        android:inputType="phone|text"
                        android:maxLength="10"
                        android:id="@+id/edit_text_telephone"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tel"/>
                </android.support.design.widget.TextInputLayout>


                <!--<TextView-->
                    <!--android:gravity="end"-->
                    <!--android:textStyle="bold"-->
                    <!--android:padding="8dp"-->
                    <!--android:text="@string/gear"-->
                    <!--android:textSize="16sp"-->

                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->

                <!--<ToggleButton-->
                    <!--android:layout_gravity="center"-->
                    <!--android:checked="false"-->
                    <!--android:text=""-->
                    <!--android:textOff=""-->
                    <!--android:textOn=""-->
                    <!--android:id="@+id/toggle_button_gear"-->
                    <!--android:background="@drawable/selector_gear_toggle_button"-->
                    <!--android:layout_width="80dp"-->
                    <!--android:layout_height="40dp" />-->

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_marginLeft="6dp"-->
                <!--android:layout_marginRight="6dp"-->
                <!--android:gravity="center"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:id="@+id/input_layout_tel"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content">-->
                    <!--<EditText-->
                        <!--android:inputType="phone|text"-->
                        <!--android:maxLength="14"-->
                        <!--android:id="@+id/edit_text_telephone"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="@string/tel"/>-->
                <!--</android.support.design.widget.TextInputLayout>-->

                <!--<TextView-->
                    <!--android:textStyle="bold"-->
                    <!--android:padding="8dp"-->
                    <!--android:text="@string/province"-->
                    <!--android:textSize="16sp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->

                <!--<Spinner-->
                    <!--android:layout_weight="1"-->
                    <!--android:id="@+id/spinner_province"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"/>-->
            <!--</LinearLayout>-->

            <TextView
                android:textColor="@color/colorHintDark"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="คำโฆษณาไม่เกิน 30 ตัวอักษร"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:id="@+id/input_layout_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textSize="15sp"
                    android:id="@+id/edit_text_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/topic_post" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:id="@+id/input_layout_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textStyle="bold"
                    android:maxLength="100"
                    android:scrollbars="vertical"
                    android:textSize="15sp"
                    android:id="@+id/edit_text_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_details" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_post"
                android:layout_gravity="bottom"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_menu_bottom"
                android:text="ลงประกาศขาย" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>






</LinearLayout>